--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -7,4 +7,5 @@
 	</tr>
 </table>
 
+<%= button_to "Checkout", new_order_path, method: :get %>
 <%= button_to 'Empty cart', cart, remote: true, method: :delete, confirm: 'Are you sure?' %>
